--- a/Plataforma/templates/docentes/inicio.html
+++ b/Plataforma/templates/docentes/inicio.html
@@ -29,7 +29,7 @@
                     <div class="gifImg">
                         
                         <div class="contenerdorNombreRector">
-                            <p class="nombreRector" ><strong>Alonso Guevara</strong></p>
+                            <p class="nombreRector" ><strong>{{data.0}} {{data.1}}</strong></p>
                         </div>
                         
                         <div class="contenedorCargo" style="cursor: pointer;"> <p class="cargo"><strong> Docente</strong></p>
