arreglado inicio y registro, falta un poco de estilo

--- a/Plataforma/static/principal/css/sesion.css
+++ b/Plataforma/static/principal/css/sesion.css
@@ -19,6 +19,16 @@
    transition: transform 1s;
   transform: translateY(0%);
 }
+.modal-container_Sesion2{
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgb(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .modal-container_SesiónDos {
   background-size: cover;
   width: 40%;
@@ -205,3 +215,9 @@
      color: #000;
 
     } 
+.tituloF {
+  font-family: 'Open Sans' sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  color :red;
+}
