--- a/Plataforma/templates/docentes/crear_asignatura.html
+++ b/Plataforma/templates/docentes/crear_asignatura.html
@@ -10,7 +10,7 @@
 <body>
 	<main class="contenedor">
 		<div class="arriba">
-				<input class="input" type="" name placeholder="Registre una asignatura">
+				<input class="input" type="text" name placeholder="Registre una asignatura">
 			
 		</div>
 		<div class="abajo">
