--- a/Plataforma/static/principal/css/registro.css
+++ b/Plataforma/static/principal/css/registro.css
@@ -164,10 +164,37 @@
   justify-content: center;
   align-items: center;
 }
+.modal-container_intercambioDocentes2{
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgb(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .modal-container_intercambioDosDocentes{
   background-size: cover;
   width: 70%;
   height: 90%;
+  background-image: url("../img/fondo.gif");
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  position: relative;
+  transition: transform 1s;
+  transform: translateY(0%);
+  border-radius: 10px;
+  /*overflow: hidden;*/
+  
+}
+.modal-container_intercambioDosDocentes2{
+  background-size: cover;
+  width: 70%;
+  height: 80%;
   background-image: url("../img/fondo.gif");
   text-align: center;
   display: flex;
@@ -251,7 +278,6 @@
     box-shadow: 10px 10px #E5E4E4;
     margin-top: -30px;
 }
-
 /*Estilo de los textos de registros */
 .txt_registro{
 	margin-bottom: 25px;
@@ -349,9 +375,21 @@
     font-weight: bold;
     cursor: pointer;
     outline: none;
-
 }
-
+#boton_registro2{/*Boton*/
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    background-color: #0499D8;
+    border: none;
+    color: white;
+    padding: 10px 32px;
+    text-decoration: none;
+   margin-bottom: 5px;
+   margin-top: 35px;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+}
 /*Pregunta si ya tiene cuenta*/
 .txt_YaCuenta {
     font-family: 'Open Sans', sans-serif;
@@ -385,6 +423,11 @@
      font-size: 18px;
      font-weight: 300;
      color: #9B9A9A;
+}
 
-
-    }
+.tituloF {
+  font-family: 'Open Sans' sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  color :red;
+}
