--- a/Plataforma/static/directivos/css/crear_asignatura.css
+++ b/Plataforma/static/directivos/css/crear_asignatura.css
@@ -5,7 +5,14 @@
 	width: 100%;
 	height: 98vh;
 	flex-direction: column;
-	background: rgb(0,0,0,0.5);
+}
+
+#regtrMateria{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	flex-direction: column;
 }
 
 .arriba{
@@ -24,6 +31,7 @@
 	margin-left: -2%;
 	padding-left: 15px;
 	font-family: 'Open Sans' sans-serif;
+	font-size: 20px;
 }
 
 .abajo{
@@ -76,7 +84,7 @@ h1{
 	cursor: pointer;
 
 }
-.dentro{
+input[type=submit]{
 
 	background: #FCAA27;
 	width: 100%;
@@ -88,9 +96,13 @@ h1{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border: 0;
 	font-family: 'Open Sans' sans-serif;
-	color: #000;
-
+    font-size: 18px;
+    font-weight: 800;
+    color: #000;
+    outline: none;
+    cursor: pointer;
 }
 .dentro2{
 
@@ -174,12 +186,16 @@ h1{
 
 }
 .si{
-	visibility: hidden;
 	color: #fff;
 	font-size: 30px;
 	border-radius: 12px;
 	padding: 5px 5px;
 	background: #55ACEE;
 	width: 100%;
+	height: 70%;
 	text-align: center;
+}
+#intentoo{
+    width: 0;
+    visibility: hidden;
 }
