--- a/Plataforma/static/directivos/css/estilo_listaDocentes.css
+++ b/Plataforma/static/directivos/css/estilo_listaDocentes.css
@@ -1,5 +1,3 @@
-
-
 .contenedor_1{
     width: 100%;
     height: 98vh;
@@ -82,6 +80,17 @@ input{
 
 .buscador{
     border: 1px solid #D5DFDB;
+}
+.volver{
+    text-decoration: none;
+    color: #000;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    border-bottom: 25px; 
+    cursor: pointer;
+    width: 100%;
+    float: right;
+    padding: 10px 10px ;
 }
 
 button:focus{
