--- a/Plataforma/static/directivos/css/menuD.css
+++ b/Plataforma/static/directivos/css/menuD.css
@@ -167,16 +167,17 @@
 	width: 50px;
 	height: 50px;
 }
-.text_cerrarsesion{
+input[type=submit]{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	font-size: 20px;
 	padding:0px 5px;
+	border: 0;
+	outline: none;
+	cursor: pointer;
+	color: #FFF;
+	background: none;
 }
-
-
-
-
 /*contendor angosto*/
 .contenedor-menuangosto{
 
