--- a/Plataforma/templates/docentes/crear_asignatura.html
+++ b/Plataforma/templates/docentes/crear_asignatura.html
@@ -9,70 +9,82 @@
 </head>
 <body>
 	<main class="contenedor">
-		<div class="arriba">
-				<input class="input" type="text" name placeholder="Registre una asignatura">
-			
-		</div>
-		<div class="abajo">
-			
-			<div class="imagen">
-				<img id="f"	 width="200px" height="200px" src="{{ url_for('static', filename='directivos/img/52.png') }}">
-				<div class="elegir">
-					<div style="width: 100%; " class="cerrar" >
-						<i style="float: right; padding: 5px; color:#55ACEE; cursor: pointer;" class="fas fa-times-circle "></i>
-					</div>
-					<div class="elegir_dentro">
-						<div style="cursor: pointer;"><img class="elegir_logo" src="{{ url_for('static', filename='directivos/img/43.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/43.png') }}')"></div>
-						
-						<img style="cursor: pointer;" class="elegir_logo" src="{{ url_for('static', filename='directivos/img/44.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/44.png') }}')">
+		<form id="regtrMateria" action="/registroMateria" method="POST">
 
-
-					</div>
-					<div  class="elegir_dentro">
-						<div style="cursor: pointer;"><img class="elegir_logo" src="{{ url_for('static', filename='directivos/img/45.png') }}"onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/45.png') }}')"></div>
-						
-						<img style="cursor: pointer;" class="elegir_logo" src="{{ url_for('static', filename='directivos/img/46.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/46.png') }}')">
-						<br>	
-						
-						
-					</div>
-					<div style="cursor: pointer;"  >	<img class="elegir_logo"	 width="200px" height="200px" src="{{ url_for('static', filename='directivos/img/35.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/35.png') }}')"></div>
-						</div>
-				<div class="logo">
-					<h1 style="">Logo</h1>
-					<div class="Elegir_Logo">
-						<i  title="Elegir Logo" style="cursor: pointer;" class="fas fa-caret-down "></i>
-					</div>
-				</div>
+			<div class="arriba">
+				<input  type="text" name="nameMateria" placeholder="Registre una asignatura" required="">
 			</div>
-			<div class="botones">
-				<div class="aceptar">
-					<div class="dentro"><h1>Aceptar</h1></div>
-				</div>
-			
-			
-				<div class="cancelar">
-					<div class="dentro2"><h1>Cancelar</h1></div>
-				</div>
-			</div>
-
-		</div>
-		<div class="resultado">
-				<div class="si">Asignatura Creada
-				<i class="fas fa-cloud-upload-alt"></i><br>
-				Su código es: {{nombre}}
-				</div>
-				<div class="no">No se creo ninguna asignatura
-				<i class="fas fa-exclamation-triangle"></i></div>
-
+			<div class="abajo">
 				
-		</div>
+				<div class="imagen">
+					<img id="f"	 width="200px" height="200px" src="{{ url_for('static', filename='directivos/img/52.png') }}">
+					<div class="elegir">
+						<div style="width: 100%; " class="cerrar" >
+							<i style="float: right; padding: 5px; color:#55ACEE; cursor: pointer;" class="fas fa-times-circle "></i>
+						</div>
+						<div class="elegir_dentro">
+							<div style="cursor: pointer;"><img class="elegir_logo" src="{{ url_for('static', filename='directivos/img/43.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/43.png') }}')"></div>
+							
+							<img style="cursor: pointer;" class="elegir_logo" src="{{ url_for('static', filename='directivos/img/44.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/44.png') }}')">
+						</div>
+						<div  class="elegir_dentro">
+							<div style="cursor: pointer;"><img class="elegir_logo" src="{{ url_for('static', filename='directivos/img/45.png') }}"onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/45.png') }}')"></div>
+							
+							<img style="cursor: pointer;" class="elegir_logo" src="{{ url_for('static', filename='directivos/img/46.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/46.png') }}')">
+							<br>	
+							
+							
+						</div>
+						<div style="cursor: pointer;"  >	<img class="elegir_logo"	 width="200px" height="200px" src="{{ url_for('static', filename='directivos/img/35.png') }}" onclick="cambiarImagenJS('{{ url_for('static', filename='directivos/img/35.png') }}')"></div>
+							</div>
+					<div class="logo">
+						<h1 style="">Logo</h1>
+						<div class="Elegir_Logo">
+							<i  title="Elegir Logo" style="cursor: pointer;" class="fas fa-caret-down "></i>
+						</div>
+					</div>
+				</div>
+				<div class="botones">
+					<div class="aceptar">
+						
+						
+						<input type="submit" class="dentro" placeholder="Aceptar">
+					</div>
+				
+				
+					<div class="cancelar">
+						<div class="dentro2"><h1>Cancelar</h1></div>
+					</div>
+				</div>
+
+			</div>
+			<div class="resultado">
+					<div class="si" >
+						<!--captura mensajes del servidor -->
+						{% with messages = get_flashed_messages() %} 
+						{% if messages %}
+						{%for mesage in messages %}
+							{{ mesage }}
+						{% endfor %}
+						{% endif %}
+						{% endwith %}
+					</div>
+					<div class="no">No se creo ninguna asignatura
+					<i class="fas fa-exclamation-triangle"></i></div>
+			</div>
+			<input id="intentoo" type="text" name="imageen" value="/static/directivos/img/52.png">
+		</form>
 
 	</main>
 	
 	<script src="{{ url_for('static', filename='directivos/js/crear_asignatura.js') }}"></script>
 	<script src="{{ url_for('static', filename='directivos/js/jquery.js') }}"></script>
-
+	<script>
+		function cambiarImagenJS(a){
+                document.getElementById("f").src=a;
+                document.getElementById("intentoo").value=a;
+            }
+	</script>
 
 </body>
 </html>	
