--- a/Plataforma/static/directivos/css/perfil.css
+++ b/Plataforma/static/directivos/css/perfil.css
@@ -152,6 +152,7 @@
     width: 100%;
     height: 100px;
     display: flex;
+    margin-top: 10%;
     justify-content: space-between;
     align-items: center;
 }
@@ -200,3 +201,8 @@
     height: 100px;
 }
 
+.no{
+    visibility: hidden;
+    height: 0;
+    width: 0;
+}
